--- a/package.json
+++ b/package.json
@@ -10,38 +10,35 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@clerk/clerk-react": "^5.2.7",
-    "@clerk/nextjs": "^5.2.2",
-    "@clerk/shared": "^2.3.1",
-    "@hookform/resolvers": "^3.9.0",
-    "@prisma/client": "^5.16.1",
-    "@radix-ui/react-checkbox": "^1.1.1",
-    "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-dropdown-menu": "^2.1.1",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-popover": "^1.1.1",
-    "@radix-ui/react-select": "^2.1.1",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@tanstack/react-table": "^8.19.2",
-    "axios": "^1.7.2",
+    "@clerk/nextjs": "^4.29.12",
+    "@hookform/resolvers": "^3.3.4",
+    "@prisma/client": "^5.12.1",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-table": "^8.16.0",
+    "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
+    "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
-    "lucide-react": "^0.400.0",
-    "next": "14.1.0",
-    "next-cloudinary": "^6.6.2",
-    "prisma": "^5.16.1",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.52.1",
+    "lucide-react": "^0.368.0",
+    "next": "^14.1.0",
+    "next-cloudinary": "^6.5.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.3",
     "react-hot-toast": "^2.4.1",
     "swr": "^2.2.5",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8",
-    "zustand": "^4.5.4"
+    "zod": "^3.22.5",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
